--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "preinstall": "",
     "postinstall": "tsc && webpack",
-    "install": "node .",
+    "install": "",
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
