--- a/app/frame/unknown.json
+++ b/app/frame/unknown.json
@@ -3,7 +3,7 @@
         "element":{
             "style":{
                 "mix-blend-mode":"difference",
-                "background-color": "white",
+                "background-color": "dodgerblue",
                 "width":"100%",
                 "height":"100%",
                 "display":"block",
