--- a/.env
+++ b/.env
@@ -19,3 +19,10 @@ ELECTRON_ICON=app/icon/favicon.png
 PRODUCTION=0
 JS_COMPRESSION=0
 WEBPACK_PRODUCTION=0
+DB=
+READ_DB=fSReadDB
+READ_DB_HOST=localhost
+READ_DB_PORT=27017
+EVENT_DB=fSEventDB
+EVENT_DB_HOST=localhost
+EVENT_DB_PORT=27017
