--- a/.env
+++ b/.env
@@ -26,3 +26,7 @@ READ_DB_PORT=27017
 EVENT_DB=fSEventDB
 EVENT_DB_HOST=localhost
 EVENT_DB_PORT=27017
+HASH_SIZE=32
+HASH_MULTIPLIER=4
+HASH_ITERATIONS=1024
+HASH_DIGEST=sha512
